Added a user typng effect,active or inactive effect
